Up version of VBGA, don't fail on VBGA install

--- a/tools/build
+++ b/tools/build
@@ -21,7 +21,7 @@ vagrant box update
 vagrant up || true
 vagrant ssh -c "sudo bash -s" < upgrade_os
 vagrant reload || true
-vagrant ssh -c "sudo bash -s" < ../tools/upgrade_vbguest
+vagrant ssh -c "sudo bash -s" < ../tools/upgrade_vbguest || true
 vagrant reload
 
 vagrant package
